objects/chargebeeapps__CB_Job_Settings__c.object
<CustomObject>
    <fields>
        <fullName>chargebeeapps__Batch_size__c</fullName>
        <label>Batch size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chargebeeapps__Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <label>CB Job Settings</label>
    <nameField>
        <label>CB Job Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Job Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>